--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -9,9 +9,11 @@
 	and private method {issues}/694[#694]
 - Introduce phantom arguments (`bs.ignore`) for ad-hoc
 	polymorphism {issues}/686[#686]
-* Bug fixes
+
+* Bug fixes and enhancment
 
 * Tools (bspack)
+
 
 
 == 1.0
