--- a/site/docsource/CHANGELOG.adoc
+++ b/site/docsource/CHANGELOG.adoc
@@ -5,6 +5,13 @@
 
 * Features
 
+- Relax syntactic restrictions for all extension point {issues}793[#793]
+	so that `bs.obj`, `obj`, `bs.raw`, `raw`, etc will both work.
+	Note that all attributes will still be qualified
+
+- Suport bs.splice in bs.new {issues}793[#793]
+ 
+
 == 1.03
 
 * Features
