--- a/site/docsource/CHANGELOG.adoc
+++ b/site/docsource/CHANGELOG.adoc
@@ -4,6 +4,7 @@
 == 1.1.0(dev)
 
 * Features
+- Add bsdep.exe {issues}822[#822]	
 - Conditional compilation support {issues}820[#820]
 - Relax syntactic restrictions for all extension point {issues}793[#793]
 	so that `bs.obj`, `obj`, `bs.raw`, `raw`, etc will both work.
