--- a/site/docsource/Conditional-compilation-support.adoc
+++ b/site/docsource/Conditional-compilation-support.adoc
@@ -105,12 +105,14 @@ type open_flag =
 For BuckleScript users, nothing needs to be done (it is baked in the language level),
 for non BuckleScript users, we provide an external pre-processor, so it will work with other OCaml
 compilers too.
-
+Note that the {BuckleScript}/blob/master/jscomp/bin/bspp.ml[bspp.ml] is a stand alone file,
+so that it even works without compilation.
 .Example
 [source,sh]
 -----------
 bsc.exe -c lwt_unix.mli
 ocamlc -pp 'bspp.exe' -c lwt_unix.mli
+ocamlc -pp 'ocaml -w -a bspp.ml' -c lwt_unix.mli
 -----------
 
 
