--- a/site/docsource/CHANGELOG.adoc
+++ b/site/docsource/CHANGELOG.adoc
@@ -1,11 +1,14 @@
 
 [appendix]
 
-## CHANGES
+== CHANGES
 
-== 1.1.3 (dev)
+=== 1.2.1 + dev
 
-== 1.1.2
+* Features
+- add `-bs-D` `-bs-list-conditionals` flags {issues}/851[#851]
+
+=== 1.1.2
 
 * Fixes
 
@@ -15,7 +18,7 @@
 
 - Provide bspp.exe for official compiler
 
-== 1.1.1
+=== 1.1.1
 
 * Features
 - Add bsdep.exe {issues}/822[#822]
@@ -27,7 +30,7 @@
 - Suport bs.splice in bs.new {issues}/793[#793]
 - Complete `bs.splice ` support and documentation {issues}/798[#798]
 
-== 1.03
+=== 1.03
 
 * Features
 - Add an option `-bs-no-warn-unused-bs-attribute` {issues}/787[#787]
@@ -51,7 +54,7 @@
 ------
 Now these symlinks are removed, you have to refer to `bs-platform/bin/bsc.exe`
 
-== 1.02
+=== 1.02
 
 * Bug fixes and enhancement
 
@@ -63,7 +66,7 @@ Now these symlinks are removed, you have to refer to `bs-platform/bin/bsc.exe`
   By default, `bsc.exe` will warn when it detect some ocaml datatype is passed from/to external FFi
 - Add an option `-bs-eval` {issues}/784[784]
 
-== 1.01
+=== 1.01
 
 * FFI
 - support fields and mutable fields in JS object creation
@@ -76,6 +79,6 @@ Now these symlinks are removed, you have to refer to `bs-platform/bin/bsc.exe`
 - Enforce `#=` always return unit {issues}/718[#718] for better error messages
 
 
-== 1.0
+=== 1.0
 
 Initial release
