--- a/site/docsource/Dev-mode-How-to.adoc
+++ b/site/docsource/Dev-mode-How-to.adoc
@@ -1,41 +1,77 @@
-## How to contribute
+## Contributions
 
-### Build the compiler
+First, thanks for your interest in contribution, 
+there are plenty of ways in contributions, like blogging, sharing your experience, 
+open sourcing your libraries using BuckleScript, they are all deeply appreciated. 
+ 
+This section will focus on how to contribute to this repo.
 
-The development of BuckleScript compiler relies on 2 tools which are
-readily available in `opam` and work with our patched OCaml compiler:
+### Development set-up
 
-* http://caml.inria.fr/pub/docs/manual-ocaml-400/manual032.html[ocamlbuild]:
-Default build tool for OCaml project
-* https://github.com/ocaml/camlp4[camlp4]: Tool used to generate OCaml
-code for processing large AST. (j.ml file).
+* Having https://opam.ocaml.org/[opam] installed
 
-After having installed the above dependencies from opam you can run the
-following:
+    opam switch 4.02.3+buckle-master # use our OCaml compiler
+    opam install camlp4  <1>
++
+`Camlp4` is used to generate OCaml code for processing large AST. (`j.ml` file), if you don't 
+change `j.ml` (most likely you won't), so you probably don't need it
+
+* Having https://nodejs.org/[NodeJS] installed 
+* Having Make installed 
+* OS: Mac/Linux (Note BuckleScript works on Windows, but the dev mode is not tested)
+
+Below assume that you are working in `jscomp` directory.  
+
+
+### Contributing to `bsb.exe`
+
+The build target is
+[source,sh]
+-----------
+make bin/bsb.exe
+-----------
+
+So whenever you change files relevant to the build tool `bsb.exe`, try it and do some 
+test, if it works, send a pull request!
+
+
+Note that for most binaries in BuckleScript, we also have a **release mode**, which will pack 
+all relevant files into a single file, this is important, since it will cut all our dev-dependencies, 
+so the user does not need install those tools. 
+
+
+You can verify it by typing
+[source,sh]
+----------
+make snapshotml # see the diffs in jscomp/bin
+----------
+
+But please **don't commit** those changes in PR, it will cause painful merge conflicts
+
+
+### Contributing to `bsc.exe`
+
+[source,sh]
+-----------
+make bin/bsc.exe # build the compiler in dev mode
+-----------
+
+[source,sh]
+-----------
+make lib # build all libs using the dev compiler
+-----------
+
+There is also a snapshot mode,
 
 [source,sh]
 ----------
-cd jscomp/
-./build.sh
-----------
+make snapshotml
+---------- 
 
+This will actually snapshot your changes into a single ml file and used in npm distribution.
+But please **don't commit** those changes in PR, it will cause painful merge conflicts
 
-### Build the runtime
-
-[source,sh]
-----------------------
-cd ./runtime; make all
-----------------------
-
-
-### Build the stdlib
-
-[source,sh]
----------------------
-cd ./stdlib; make all
----------------------
-
-### Help rewrite the whole runtime in OCaml
+### Contributing to the runtime 
 
 BuckleScript runtime implementation is currently a mix of OCaml and
 JavaScript. (`jscomp/runtime` directory). The JavaScript code is defined
